[package]
edition = "2021"
name = "web-crawler"
version = "0.2.0"
[dependencies]
clap = "3.1.6"
scraper = "0.12.0"
select = "0.5.0"
tokio-stream = "0.1.8"
futures-util = "0.3.21"
concurrent-queue = "1.2.2"

[dependencies.reqwest]
version = "0.11.9"

[dependencies.tokio]
features = ["full"]
version = "1.17.0"
